--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </ul>
         </div>
         <div class="center">
-            <h1>AMAZING WEBSITE</h1>
-            <h2>WELCOME</h2>
+            <h1>IT'S MOVIE TIME</h1>
+            <h2>Let's Fun</h2>
                <div class="buttons">
             <button>More about..</button>
             <button>Sign in</button>
